--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="service_launcher_description">This launcher service handles service lifecycle.</string>
     <string name="service_foreground_name">Auto Round Corner Background Service</string>
     <string name="service_foreground_description">This background service handles Orientation Changes</string>
+    <string name="service_foreground_notichannel_name">Background Service</string>
+    <string name="service_foreground_notichannel_description">This notification should kept on, to keep service working. You can safely minimize this.</string>
     <string name="msg_service_started">Service Started</string>
     <string name="msg_service_failed_to_start">Service Failed to start</string>
     <string name="msg_check_permission">Please check this app has a permission for changing secure settings</string>
